node-affinity-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
spec:
  replicas: 3 
  selector:
    matchLabels:
      name: my-app
  template:
    metadata:
      labels:
        name: my-app
    spec:
      containers:
      - name: blue
        image: remyars/blue-app:latest
        ports:
        - containerPort: 80
          protocol: TCP
      affinity:
       nodeAffinity:
         preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100 # You can set the priority weight (between 1 and 100)
            preference:
              matchExpressions:
                - key: size
                  operator: In
                  values: 
                    - large
                    - medium
