pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-pvc
  labels:
    name: pod-with-pvc
spec:
  containers:
  - name: blue-pod-with-pvc
    image: remyars/blue-app:latest
    ports:
      - containerPort: 8080
        
    volumeMounts:
      - name: www-persistent-storage
        mountPath: C:\eks-pv
  volumes:
    - name: www-persistent-storage
      persistentVolumeClaim:
        claimName: blue-app-pvc
