car-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: car-app-svc
spec:
  selector:
    name: my-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
