service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ingress
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    name:  my-app
  ports:
    - nodePort: 30010
      port: 80
      targetPort: 80
